feat!: Moved jax-rs classes and singletons concatenation logic into generic